--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+
+html {
+    scroll-behavior: smooth;
+  }
+
 #main-header img {
     width: 100%;  
     height: 100%; 
@@ -29,3 +34,65 @@
         display: none !important;
     }
 }
+
+#BackToTopBtn
+{
+    position: fixed; 
+    right: 27%;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 32px;
+    opacity: 0;
+    transition: all .4s;
+    pointer-events: none;
+}
+
+#BackToTopBtn.active {
+    pointer-events: auto;
+    opacity: 1;
+}
+
+
+@media (max-width : 1800px){
+    #BackToTopBtn {
+        right: 20%;
+    }
+}
+
+@media (max-width : 1600px){
+    #BackToTopBtn {
+        right: 16%;
+    }
+}
+
+@media (max-width : 1400px){
+    #BackToTopBtn {
+        right: 12%;
+    }
+}
+
+@media (max-width: 1024px) {
+    #BackToTopBtn {
+        right: 10%;
+    }
+}
+
+@media (max-width: 768px) {
+    #BackToTopBtn {
+        right: 8%;
+    }
+}
+
+@media (max-width: 480px) {
+    #BackToTopBtn {
+        right: 6%;
+    }
+}
+
+
+
+
